// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > Snapshots > should match snapshot with all features enabled 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="relative w-full overflow-auto border border-gray-200 rounded-lg"
    >
      <table
        class="w-full border-collapse"
      >
        <thead
          class="bg-gray-50 border-b border-gray-200 sticky top-0 z-10"
        >
          <tr>
            <th
              class="text-center w-12"
            >
              <input
                class="rounded border-gray-300 text-[var(--tiger-primary,#2563eb)] focus:ring-[var(--tiger-primary,#2563eb)]"
                type="checkbox"
              />
            </th>
            <th
              class="font-medium text-gray-700 text-sm px-6 py-4 text-left cursor-pointer select-none hover:bg-gray-100 transition-colors"
            >
              <div
                class="flex items-center gap-2"
              >
                Name
                <svg
                  class="inline-block ml-1 transition-colors text-gray-400"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 3l4 4H4l4-4zM8 13l-4-4h8l-4 4z"
                  />
                </svg>
              </div>
            </th>
            <th
              class="font-medium text-gray-700 text-sm px-6 py-4 text-left cursor-pointer select-none hover:bg-gray-100 transition-colors"
            >
              <div
                class="flex items-center gap-2"
              >
                Age
                <svg
                  class="inline-block ml-1 transition-colors text-gray-400"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 3l4 4H4l4-4zM8 13l-4-4h8l-4 4z"
                  />
                </svg>
              </div>
            </th>
            <th
              class="font-medium text-gray-700 text-sm px-6 py-4 text-left"
            >
              <div
                class="flex items-center gap-2"
              >
                Email
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors bg-gray-50/50"
          >
            <td
              class="text-center w-12"
            >
              <input
                checked=""
                class="rounded border-gray-300 text-[var(--tiger-primary,#2563eb)] focus:ring-[var(--tiger-primary,#2563eb)]"
                type="checkbox"
              />
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              John Doe
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              28
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              john@example.com
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors"
          >
            <td
              class="text-center w-12"
            >
              <input
                class="rounded border-gray-300 text-[var(--tiger-primary,#2563eb)] focus:ring-[var(--tiger-primary,#2563eb)]"
                type="checkbox"
              />
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              Jane Smith
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              32
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              jane@example.com
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors bg-gray-50/50"
          >
            <td
              class="text-center w-12"
            >
              <input
                class="rounded border-gray-300 text-[var(--tiger-primary,#2563eb)] focus:ring-[var(--tiger-primary,#2563eb)]"
                type="checkbox"
              />
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              Bob Johnson
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              45
            </td>
            <td
              class="text-sm text-gray-900 px-6 py-4 text-left"
            >
              bob@example.com
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table > Snapshots > should match snapshot with default props 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="relative w-full overflow-auto"
    >
      <table
        class="w-full border-collapse"
      >
        <thead
          class="bg-gray-50 border-b border-gray-200"
        >
          <tr>
            <th
              class="font-medium text-gray-700 text-sm px-4 py-3 text-left"
            >
              <div
                class="flex items-center gap-2"
              >
                Name
              </div>
            </th>
            <th
              class="font-medium text-gray-700 text-sm px-4 py-3 text-left"
            >
              <div
                class="flex items-center gap-2"
              >
                Age
              </div>
            </th>
            <th
              class="font-medium text-gray-700 text-sm px-4 py-3 text-left"
            >
              <div
                class="flex items-center gap-2"
              >
                Email
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors"
          >
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              John Doe
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              28
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              john@example.com
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors"
          >
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              Jane Smith
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              32
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              jane@example.com
            </td>
          </tr>
          <tr
            class="border-b border-gray-200 last:border-b-0 hover:bg-gray-50 transition-colors"
          >
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              Bob Johnson
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              45
            </td>
            <td
              class="text-sm text-gray-900 px-4 py-3 text-left"
            >
              bob@example.com
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
